--- a/love-web/pom.xml
+++ b/love-web/pom.xml
@@ -19,6 +19,11 @@
 			<artifactId>love-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+  		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>weixin</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
