--- a/love-web/src/main/webapp/WEB-INF/web.xml
+++ b/love-web/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,10 @@
             <param-name>encoding</param-name>  
             <param-value>UTF-8</param-value>  
         </init-param>  
+        <init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
     </filter>  
     <filter-mapping>  
         <filter-name>encodingFilter</filter-name>  
@@ -48,6 +52,7 @@
         <!-- 此处可以可以配置成*.do，对应struts的后缀习惯 -->  
         <url-pattern>/</url-pattern>  
     </servlet-mapping>  
+
     <welcome-file-list>  
         <welcome-file>/index.jsp</welcome-file>  
     </welcome-file-list>  
