--- a/love-web/src/main/resources/jdbc.properties
+++ b/love-web/src/main/resources/jdbc.properties
@@ -3,7 +3,7 @@
 driver=com.mysql.jdbc.Driver
 
 #\u6570\u636e\u5e93\u5730\u5740
-url=jdbc:mysql://563c744a10794.sh.cdb.myqcloud.com:5774/p2p?characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull
+url=jdbc:mysql://565d5a2065662.gz.cdb.myqcloud.com:13215/help?characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull
 
 #\u6570\u636e\u5e93\u7528\u6237\u540d
 username=cdb_outerroot
