--- a/pom.xml
+++ b/pom.xml
@@ -79,17 +79,16 @@
 		<module>weixin</module>
 	</modules>
 	<build>  
-    <plugins>  
+<!--     <plugins>  
         <plugin>  
             <groupId>org.apache.maven.plugins</groupId>  
             <artifactId>maven-compiler-plugin</artifactId>  
             <version>3.3</version>  
             <configuration>  
-                <!-- 指定source和target的版本 -->                 
-                <source>1.8</source>  
-                <target>1.8</target>  
+                <source>1.7</source>  
+                <target>1.7</target>  
             </configuration>  
         </plugin>  
-    </plugins>  
+    </plugins>   -->
 </build> 
 </project>
